# llm-zoomcamp-homework

./: .gitignore  pyproject.toml
01-intro/: rag-intro.py  setup.py
02-open-source/: ollama-elasticsearch.py  ollama-streamlit.py  ollama.py
03-vector-search/: evaluation_vector_retrieval.py  evaulation_text_retrieval.py  ground_truth_dataset_generation.py  semantic_search_elasticsearch.py
dlt-workshop/: llm_zoomcamp_rag_demo.py
homework/: 01-intro.py
homework/02-open-source/: gemma2b_prompt.py
homework/03-vector-search/: 03-vector-search.py
homework/dlt-workshop/: dlt-workshop.py  homework.py
homework/dlt-workshop/.dlt/: .sources
